# FastAPI_pet-booking

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
app/: config.py  database.py  exceptions.py  main.py
app/admin/: auth.py
app/bookings/: models.py  repo.py  router.py  schemas.py
app/hotels/: models.py  repo.py  router.py  schemas.py
app/hotels/rooms/: models.py  repo.py  router.py  schemas.py
app/images/: router.py
app/importer/: repo.py  router.py
app/migrations/: env.py
app/migrations/versions/: 822fd482c228_added_tables.py
app/repo/: base.py
app/tasks/: tasks.py
app/tests/: conftest.py  mock_hotels.csv  mock_rooms.json
app/tests/integration_tests/test_bookings/: test_api.py  test_dao.py
app/tests/integration_tests/test_imports/: test_dao.py
app/tests/integration_tests/test_users/: test_api.py
app/tests/unit_tests/test_users/: test_dao.py
app/users/: auth.py  dependencies.py  models.py  repo.py  router.py
docker/: app.sh  celery.sh
